<resources>
    <string name="app_name">Goals</string>
    <string name="goals_icon">Goals Icon</string>

    <!-- Goal text -->
    <string name="my_goal">My goal</string>
    <string name="my_goals">My goals</string>
    <string name="goal_title">Goal title</string>
    <string name="goal_status">Goal status</string>
    <string name="add_goal">Add goal</string>
    <string name="edit_goal">Edit goal</string>
    <string name="delete_goal">Delete goal</string>
    <string name="goal_title_length">Goal must have a title.</string>
    <string name="title_sample">Run for president</string>

    <!-- Goal Image text -->
    <string name="goal_image">Goal image</string>
    <string name="uploading_image_progress">Uploading image…</string>
    <string name="add_image">Add image</string>
    <string name="reset_image">Reset image</string>

    <!-- Task text -->
    <string name="tasks">Tasks</string>
    <string name="add_task">Add task</string>
    <string name="edit_task">Edit task</string>
    <string name="delete_task">Delete task</string>
    <string name="task_name">Task name</string>
    <string name="task_description">Task description</string>
    <string name="task_criticality">Task criticality</string>
    <string name="critical_task">Critical task</string>

    <!-- Task fundraiser text -->
    <string name="fundraiser">Fundraiser</string>
    <string name="funds">Funds</string>
    <string name="funds_text">%1$s of %2$s raised.</string>
    <string name="needed_funds">Needed funds</string>
    <string name="available_funds">Available funds</string>

    <!-- Task location text -->
    <string name="location">Location</string>
    <string name="add_location">Add location</string>
    <string name="edit_location">Edit location</string>
    <string name="remove_location">Remove location</string>
    <string name="save_location">Save location</string>
    <string name="known_location">Location set to around %1$s</string>
    <string name="location_set">Location set.</string>

    <string name="log_out">Log out</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="task_about">About this task</string>


    <string name="in_progress">In progress</string>
    <string name="completed">Completed</string>
    <string name="failed">Failed</string>
    <string-array name="task_status_array">
        <item>@string/in_progress</item>
        <item>@string/completed</item>
        <item>@string/failed</item>
    </string-array>

    <string name="task_status">Task status</string>
    <string name="tasks_in_progress">Tasks in Progress</string>
    <string name="tasks_completed">Tasks completed</string>
    <string name="critical_tasks">Critical tasks</string>
    <string name="failed_critical_tasks">Failed critical tasks</string>
    <string name="tasks_failed">Tasks failed</string>
</resources>